updating comming soon section messages

--- a/src/app/components/comming-soon/comming-soon.component.html
+++ b/src/app/components/comming-soon/comming-soon.component.html
@@ -30,7 +30,7 @@
       </div>
       
       <!-- Coming Soon Features with Enhanced Effects -->
-      <h1 class="my-8 text-4xl font-bold uppercase section_title animate-slide-up">Fonctionnalités à venir</h1>
+      <h1 class="my-8 text-4xl font-bold uppercase section_title animate-slide-up">Autre fonctionnalités</h1>
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8 mb-12 text-[#002D5B]">
           @for(feature of commingSoonFeatures; track feature.id) {
               <div class="relative p-6 transition duration-500 transform bg-white rounded-lg shadow-lg hover:scale-105 hover:shadow-xl group">
