--- a/src/app/components/comming-soon/comming-soon.component.html
+++ b/src/app/components/comming-soon/comming-soon.component.html
@@ -30,7 +30,7 @@
       </div>
       
       <!-- Coming Soon Features with Enhanced Effects -->
-      <h1 class="my-8 text-4xl font-bold uppercase section_title animate-slide-up">Autre fonctionnalités</h1>
+      <h1 class="my-8 text-4xl font-bold uppercase section_title animate-slide-up">Autres fonctionnalités</h1>
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8 mb-12 text-[#002D5B]">
           @for(feature of commingSoonFeatures; track feature.id) {
               <div class="relative p-6 transition duration-500 transform bg-white rounded-lg shadow-lg hover:scale-105 hover:shadow-xl group">
@@ -44,7 +44,7 @@
       <!-- Call to Action with Animated Button -->
 
       <p class="mb-6 text-lg">Prêt à découvrir et utiliser nos solutions ? Accédez-y dès maintenant !</p>
-        <a href="https://sirhngombe.onpousse.com" target="_blank"  class="relative px-8 py-4 overflow-hidden font-semibold text-white transition-shadow duration-300 rounded-full bg-gradient-to-r from-primary to-blue-600 hover:shadow-lg hover:scale-105">
+        <a href="http://sirhngombe.onpousse.com" target="_blank"  class="relative px-8 py-4 overflow-hidden font-semibold text-white transition-shadow duration-300 rounded-full bg-gradient-to-r from-primary to-blue-600 hover:shadow-lg hover:scale-105">
             Accéder au Service
             <span class="absolute inset-0 bg-white rounded-full opacity-20 animate-pulse-light hover:animate-pulse-slow"></span>
         </a>
