updated a paiment section

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -8,6 +8,9 @@
 <div id="cvtheque">
     <app-comming-soon></app-comming-soon>
 </div>
+<div>
+<app-digital-payment-solution></app-digital-payment-solution>
+</div>
 <div id="services">
     <app-our-services></app-our-services>
 </div>
