--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,25 +1,25 @@
-<header class="bg-primary text-white sticky top-0 z-50">
-    <div class="desktop-menu hidden container   mx-auto md:flex justify-between items-center p-4">
+<header class="sticky top-0 z-50 bg-white drop-shadow-header">
+    <div class="container items-center justify-between hidden p-4 mx-auto desktop-menu md:flex">
       <a href="/" class="flex items-center">
         <img src="logos/ngombe.jpg" alt="Ngombe SARL" class="h-12 mr-4">
         <h1 class="text-3xl font-bold">Ngombe SARL</h1>
       </a>
       <nav class="space-x-6">
         @for(link of links; track $index) {
-          <a [href]="'#'+link.anchor" class="font-bold hover:text-blue-600">{{link.name}}</a>
+          <a [href]="'#'+link.anchor" class="hover:text-blue-600">{{link.name}}</a>
         }
       </nav>
     </div>
 
-    <div class="fixed left-0 top-4 z-50 md:hidden w-full flex items-center justify-between px-8">
+    <div class="fixed left-0 z-50 flex items-center justify-between w-full px-8 top-4 md:hidden">
       <!-- <div class="w-[70px] h-[70px] rounded-full"> -->
       <a href="/" class="w-[70px] h-[70px]">
-        <img src="logos/ngombe.jpg" alt="logo ngombe" [ngClass]="{'hidden' : isOpen}" class="w-full h-full rounded-full object-cover">
+        <img src="logos/ngombe.jpg" alt="logo ngombe" [ngClass]="{'hidden' : isOpen}" class="object-cover w-full h-full rounded-full">
       </a>
       <div class="bg-white rounded-full">
         <button 
         (click)="toggleSidebar()"
-        class="hamburger menu-btn-side bg-black" 
+        class="bg-black hamburger menu-btn-side" 
         [ngClass]="{'open' : isOpen}"
         id="menu-btn-side">
         <span class="hamburger-top"></span>
@@ -34,11 +34,11 @@
       [ngClass]="{'translate-x-0': isOpen, 'translate-x-full': !isOpen}"
     > 
       <div class="w-[70px] h-[70px]">
-        <img src="logos/ngombe.jpg" alt="logo ngombe" [ngClass]="{'hidden' : !isOpen}" class="w-full h-full rounded-full object-cover">
+        <img src="logos/ngombe.jpg" alt="logo ngombe" [ngClass]="{'hidden' : !isOpen}" class="object-cover w-full h-full rounded-full">
       </div>
-      <nav class="flex flex-col w-full justify-center items-center mt-8 gap-4">
+      <nav class="flex flex-col items-center justify-center w-full gap-4 mt-8">
         @for(link of links; track $index) {
-          <a (click)="toggleSidebar()" [href]="'#'+link.anchor" class="hover:text-blue-300 text-4xl">{{link.name}}</a>
+          <a (click)="toggleSidebar()" [href]="'#'+link.anchor" class="text-4xl hover:text-blue-300">{{link.name}}</a>
         }
       </nav>
   </sidebar>
