--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,3 +1,6 @@
+*{
+    overflow-x: hidden;
+}
 a{
     position: relative;
 }
@@ -5,7 +8,7 @@ a{
 a::after {
     content: '';
     position: absolute;
-    bottom: 0;
+    bottom: -2px;
     left: 0;
     transform-origin: center;
     width: 0;
