--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@
 // @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
 body {
   // font-family: 'Poppins', sans-serif;
-  font-family: 'Times New Roman', Times, serif;
+  // font-family: 'Times New Roman', Times, serif;
   scroll-behavior: smooth;
 }
 * {
