updated header, added sirh features section, business-processing section

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -5,6 +5,22 @@
 <div id="home">
     <app-hero></app-hero>
 </div>
+<div>
+    <app-process-ingineering></app-process-ingineering>
+</div>
+<app-sirh-ngombe></app-sirh-ngombe>
+<app-features></app-features>
+
+
+
+
+
+
+
+
+
+
+
 <div id="cvtheque">
     <app-comming-soon></app-comming-soon>
 </div>
