updated services, added cta, digital payment

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -8,27 +8,21 @@
 <div>
     <app-process-ingineering></app-process-ingineering>
 </div>
-<app-sirh-ngombe></app-sirh-ngombe>
-<app-features></app-features>
-
-
-
-
-
-
-
-
-
-
-
-<div id="cvtheque">
-    <app-comming-soon></app-comming-soon>
+    <app-sirh-ngombe></app-sirh-ngombe>
+    <app-features></app-features>
+<div>
+    <app-digital-payment-solution></app-digital-payment-solution>
 </div>
 <div>
-<app-digital-payment-solution></app-digital-payment-solution>
-</div>
-<div id="services">
     <app-our-services></app-our-services>
+</div>
+
+<!-- <div id="cvtheque">
+    <app-comming-soon></app-comming-soon>
+</div> -->
+
+<div id="services">
+    <!-- <app-our-services></app-our-services> -->
 </div>
 <div id="partners">
     <app-partners></app-partners>
