--- a/src/app/components/features/features.component.html
+++ b/src/app/components/features/features.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-col items-center justify-center py-10 md:px-20">
-    <h2 class="text-2xl font-bold uppercase text-sky-600">Autres fonctionnalités</h2>
+    <h2 class="text-4xl font-bold uppercase text-primary">Autres fonctionnalités</h2>
     <div class="flex flex-col items-center justify-center w-full gap-8 p-6 bg-white lg:flex-row">
     <!-- Left Side -->
     <div class="space-y-4 lg:w-1/2">
