added a features section, updated partners, and about-contact-us section

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -17,6 +17,9 @@
     <app-our-services></app-our-services>
 </div>
 
+<div>
+    <app-about-us></app-about-us>
+</div>
 <!-- <div id="cvtheque">
     <app-comming-soon></app-comming-soon>
 </div> -->
