--- a/src/app/components/partners/partners.component.html
+++ b/src/app/components/partners/partners.component.html
@@ -1,14 +1,14 @@
-<!-- <section id="trusted-by" class="bg-gray-100 py-16">
-    <div class="container flex flex-col mx-auto px-4 md:px-6 lg:px-20">
-      <h2 class="text-4xl font-bold text-center  uppercase text-primary mb-12 section_title">
+<!-- <section id="trusted-by" class="py-16 bg-gray-100">
+    <div class="container flex flex-col px-4 mx-auto md:px-6 lg:px-20">
+      <h2 class="mb-12 text-4xl font-bold text-center uppercase text-primary section_title">
         Ils nous font confiance
       </h2>
-      <p class="text-center text-gray-600 mb-8">
+      <p class="mb-8 text-center text-gray-600">
         Nous collaborons avec des partenaires de renom pour offrir des solutions d’ingénierie de qualité supérieure.
       </p>
   
       <div 
-        class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-6 gap-8 items-center transition-all duration-500 ease-in-out overflow-hidden"
+        class="grid items-center grid-cols-2 gap-8 overflow-hidden transition-all duration-500 ease-in-out md:grid-cols-4 lg:grid-cols-6"
         [style.max-height.px]="displayedPartnersCount * 100" 
       >
         @for(partner of partners | slice:0:displayedPartnersCount; track partner) {
@@ -18,18 +18,18 @@
                 <img 
                     [src]="partner.logo" 
                     [alt]="partner.name" 
-                    class="mx-auto h-14 mb-2 shadow-lg hover:scale-105 transition duration-300"
+                    class="mx-auto mb-2 transition duration-300 shadow-lg h-14 hover:scale-105"
                 >
-                <p class="text-md font-semibold text-gray-600">{{ partner.name }}</p>
+                <p class="font-semibold text-gray-600 text-md">{{ partner.name }}</p>
             </div>
         }
       </div>
   
-      <div class="text-center mt-8 flex items-center justify-center">
+      <div class="flex items-center justify-center mt-8 text-center">
         @if(displayedPartnersCount < partners.length) {
             <button 
                 (click)="showMore()" 
-                class="px-8 py-3 rounded-lg bg-gray-200 text-gray-800 font-medium transition duration-300 hover:bg-gray-300 flex items-center justify-center gap-2"
+                class="flex items-center justify-center gap-2 px-8 py-3 font-medium text-gray-800 transition duration-300 bg-gray-200 rounded-lg hover:bg-gray-300"
                 >
                 <span>Voir plus</span>
                 <fa-icon [icon]="faArrowDown"></fa-icon>
@@ -39,7 +39,7 @@
         @if(displayedPartnersCount > initialDisplayedCount){
             <button
                 (click)="showLess()" 
-                class="px-8 py-3 rounded-lg bg-gray-200 text-gray-800 font-medium transition duration-300 hover:bg-gray-300 flex items-center justify-center gap-2 mt-4"
+                class="flex items-center justify-center gap-2 px-8 py-3 mt-4 font-medium text-gray-800 transition duration-300 bg-gray-200 rounded-lg hover:bg-gray-300"
                 >
                 <span>Voir moins</span>
                 <fa-icon [icon]="faArrowUp"></fa-icon>
@@ -50,29 +50,30 @@
   </section>
    -->
 
-  <section id="trusted-by" class="bg-gray-100 py-16">
-    <div class="container flex flex-col mx-auto px-4 md:px-6 lg:px-20">
-      <h2 class="text-4xl font-bold text-center uppercase text-primary mb-12 section_title">
-        Ils nous font confiance
-      </h2>
-      <p class="text-center text-gray-600 mb-8">
-        Nous collaborons avec des partenaires de renom pour offrir des solutions d’ingénierie de qualité supérieure.
-      </p>
-  
+  <section id="trusted-by" class="py-16">
+    <div class="flex flex-col w-full">
+      <div class="flex flex-col w-full">
+        <h2 class="mb-12 text-4xl font-bold text-center uppercase text-primary">
+          Ils nous font confiance
+        </h2>
+        <p class="mb-8 text-center text-gray-600">
+          Nous collaborons avec des partenaires de renom pour offrir des solutions d'ingénierie de qualité supérieure.
+        </p>
+      </div>
       <!-- Conteneur pour faire défiler les partenaires -->
-      <div class="relative">
+      <div class="relative bg-primary">
         <div 
           #partnersContainer 
-          class="flex overflow-x-hidden space-x-8 pb-4 scroll-smooth hide-scrollbar"
+          class="flex w-full pb-4 space-x-8 overflow-x-hidden scroll-smooth hide-scrollbar"
         >
           @for(partner of partners; track partner) {
             <div class="p-4 text-center min-w-max">
               <img 
                 [src]="partner.logo" 
                 [alt]="partner.name" 
-                class="mx-auto h-14 mb-2 shadow-lg hover:scale-105 transition duration-300"
+                class="mx-auto mb-2 transition duration-300 shadow-lg h-14 hover:scale-105"
               >
-              <p class="text-md font-semibold text-gray-600">{{ partner.name }}</p>
+              <p class="font-semibold text-gray-600 text-md">{{ partner.name }}</p>
             </div>
           }
         </div>
@@ -80,14 +81,14 @@
         <!-- Flèches gauche et droite -->
         <button 
           (click)="scrollPartners('left')" 
-          class="absolute left-0 top-1/2 transform -translate-y-1/2 bg-gray-800 text-white w-10 h-10 rounded-full transition duration-300 hover:bg-gray-950"
+          class="absolute left-0 w-10 h-10 text-white transition duration-300 transform -translate-y-1/2 bg-gray-800 rounded-full top-1/2 hover:bg-gray-950"
         >
           <fa-icon [icon]="faArrowLeft"></fa-icon>
         </button>
 
         <button 
           (click)="scrollPartners('right')" 
-          class="absolute right-0 top-1/2 transform -translate-y-1/2 bg-gray-800 text-white w-10 h-10 rounded-full  transition duration-300 hover:bg-gray-950"
+          class="absolute right-0 w-10 h-10 text-white transition duration-300 transform -translate-y-1/2 bg-gray-800 rounded-full top-1/2 hover:bg-gray-950"
         >
           <fa-icon [icon]="faArrowRight"></fa-icon>
         </button>
