--- a/src/app/components/our-services/our-services.component.html
+++ b/src/app/components/our-services/our-services.component.html
@@ -8,7 +8,7 @@
     <div class="container mx-auto">
       <h2 class="mb-6 text-4xl font-extrabold">Êtes-vous prêt à transformer votre entreprise ?</h2>
       <p class="mb-8 text-xl">Avec <strong>Ngombe Sarl</strong>, ouvrez la porte à de nouvelles opportunités et faites passer votre entreprise au niveau supérieur.</p>
-      <a href="http://sirhngombe.onpousse.com" 
+      <a href="https://www.onpousse.com" 
           target="_blank"
           class="flex justify-center px-10 py-4 mx-auto font-semibold text-center text-white transition duration-500 transform bg-blue-600 rounded-lg items center w-fit hover:bg-blue-700 hover:scale-105">
           Commencez dès maintenant
